cluster/apps/portainer/portainer/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portainer-ingress
  namespace: portainer
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    cert-manager.io/private-key-algorithm: RSA
    cert-manager.io/private-key-size: 4096
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: portainer-k3s.${SECRET_INTERNAL_DOMAIN_NAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portainer
                port:
                  number: 9000
  tls:
    - hosts:
        - portainer-k3s.${SECRET_INTERNAL_DOMAIN_NAME}
      secretName: portainer-k3s-tls
